--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
-        <title>Fuse Angular - Angular Template and Starter Kit</title>
+        <title>Scrum Angular</title>
         <meta charset="utf-8">
-        <meta name="description" content="Admin Template and Starter Kit with Angular, Angular Material Components and TailwindCSS">
+        <meta name="description" content="Scrum Angular">
         <meta name="keywords" content="Fuse,HTML,CSS,Angular,Angular 2,Angular 11,Angular 12,Angular 13,Material,Material 2,Angular Components,Tailwind,Tailwind CSS,TailwindCSS,Admin Template,Admin Starter Kit">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
 
@@ -40,7 +40,7 @@
         <!-- App root -->
         <app-root></app-root>
 
-    <script src="runtime.8c13b39be3a17ab2.js" type="module"></script><script src="polyfills.9a02d9ab26327cca.js" type="module"></script><script src="main.25b9478885c867e6.js" type="module"></script>
+    <script src="runtime.8f18530a340a8f83.js" type="module"></script><script src="polyfills.9a02d9ab26327cca.js" type="module"></script><script src="main.149ec2b10ff377ca.js" type="module"></script>
 
 
 </body></html>
